--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                         </div>
                         <div class="info-item">
                             <h3>📞 Contact</h3>
-                            <p>Phone: 098872 59471<br/>
+                            <p>Phone: +91-98872 59471<br/>
+                             Email: vastrashailii@gmail.com<br/>   
                             Hours: 9:30 AM - 8:00 PM<br/>
                             Closed on Sundays</p>
                         </div>
@@ -161,9 +162,9 @@
                     <h3>Vastra Shailii</h3>
                     <p>Authentic Jaipuri Prints & Cotton Wear</p>
                     <div class="social-links">
-                        <a href="#" class="social-link">Facebook</a>
-                        <a href="#" class="social-link">Instagram</a>
-                        <a href="#" class="social-link">WhatsApp</a>
+                        <a href="https://www.facebook.com/profile.php?id=61585549467599" class="social-link">Facebook</a>
+                        <a href="https://wa.me/919887259471" class="social-link">WhatsApp</a>
+                        <a href="https://www.instagram.com/vastra_shailii/" class="social-link">Instagram</a>
                     </div>
                 </div>
                 <div class="footer-section">
