Update social links in footer section

--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
                     <h3>Vastra Shailii</h3>
                     <p>Authentic Jaipuri Prints & Cotton Wear</p>
                     <div class="social-links">
-                        <a href="https://www.facebook.com/profile.php?id=61585549467599" class="social-link">Facebook</a>
-                        <a href="https://wa.me/919887259471" class="social-link">WhatsApp</a>
-                        <a href="https://www.instagram.com/vastra_shailii/" class="social-link">Instagram</a>
+                        <li class="ftco-animate"><a href="https://wa.me/919887259471"><span class="icon-whatsapp"></span></a></li>
+                        <li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=61585549467599"><span class="icon-facebook"></span></a></li>
+                        <li class="ftco-animate"><a href="https://www.instagram.com/vastra_shailii/"><span class="icon-instagram"></span></a></li>
                     </div>
                 </div>
                 <div class="footer-section">
