--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
                         </div>
                         <div class="info-item">
                             <h3>📞 Contact</h3>
-                            <p>Phone: +91-98872 59471<br/>
-                             Email: vastrashailii@gmail.com<br/>   
+                            <p>Phone: 098872 59471<br/>
                             Hours: 9:30 AM - 8:00 PM<br/>
                             Closed on Sundays</p>
                         </div>
@@ -154,6 +153,152 @@
 
     <div class="modal-overlay" id="modalOverlay"></div>
 
+    <!-- Policy Modals -->
+    <div class="modal policy-modal" id="shippingModal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>🚚 Shipping Policy</h2>
+                <button class="close-modal" onclick="closePolicyModal('shippingModal')">&times;</button>
+            </div>
+            <div class="policy-content">
+                <h3>Delivery Timeline</h3>
+                <p>We strive to deliver your beautiful Jaipuri products as quickly as possible:</p>
+                <ul>
+                    <li><strong>Jaipur City:</strong> Same Day Delivery</li>
+                    <li><strong>Rajasthan:</strong> 2-4 business days</li>
+                    <li><strong>Rest of India:</strong> 4-7 business days</li>
+                </ul>
+
+                <h3>Shipping Charges</h3>
+                <ul>
+                    <li><strong>Free Shipping:</strong> Orders above ₹1500</li>
+                    <li><strong>Standard Shipping:</strong> ₹99 for orders below ₹1500</li>
+                    <li><strong>Local Delivery (Jaipur):</strong> ₹50</li>
+                </ul>
+
+                <h3>Order Tracking</h3>
+                <p>Once your order is shipped, we'll send you tracking details via WhatsApp so you can monitor your delivery.</p>
+
+                <h3>Packaging</h3>
+                <p>All our products are carefully packed to ensure they reach you in perfect condition. Bedsheets and fabrics are sealed in protective packaging.</p>
+
+                <h3>Contact for Queries</h3>
+                <p>For any shipping-related questions, WhatsApp us at: <strong>+91-98872 59471</strong></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal policy-modal" id="returnsModal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>🔄 Returns & Exchange Policy</h2>
+                <button class="close-modal" onclick="closePolicyModal('returnsModal')">&times;</button>
+            </div>
+            <div class="policy-content">
+                <h3>7-Day Return Policy</h3>
+                <p>We want you to love your purchase! If you're not completely satisfied, you can return or exchange your product within 7 days of delivery.</p>
+
+                <h3>Conditions for Returns/Exchange</h3>
+                <ul>
+                    <li>Product must be unused and in original packaging</li>
+                    <li>All tags and labels should be intact</li>
+                    <li>Product should not be washed or altered</li>
+                    <li>Original invoice/receipt required</li>
+                </ul>
+
+                <h3>Non-Returnable Items</h3>
+                <ul>
+                    <li>Products used or washed</li>
+                    <li>Items without original packaging</li>
+                    <li>Products purchased during sale/clearance (unless defective)</li>
+                </ul>
+
+                <h3>How to Return/Exchange</h3>
+                <ol>
+                    <li>WhatsApp us at <strong>+91-98872 59471</strong> within 7 days</li>
+                    <li>Send photos of the product and packaging</li>
+                    <li>Mention reason for return/exchange</li>
+                    <li>We'll arrange pickup (in Jaipur) or provide return address</li>
+                </ol>
+
+                <h3>Refund Process</h3>
+                <p>Once we receive and inspect the returned product:</p>
+                <ul>
+                    <li>Refunds will be processed within 5-7 business days</li>
+                    <li>Amount will be credited to original payment method</li>
+                    <li>Exchanges will be shipped immediately after inspection</li>
+                </ul>
+
+                <h3>Defective/Damaged Products</h3>
+                <p>If you receive a defective or damaged product, we'll provide immediate replacement at no extra cost. Contact us within 48 hours with photos.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal policy-modal" id="privacyModal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>🔒 Privacy Policy</h2>
+                <button class="close-modal" onclick="closePolicyModal('privacyModal')">&times;</button>
+            </div>
+            <div class="policy-content">
+                <h3>Information We Collect</h3>
+                <p>When you place an order with Vastra Shailii, we collect:</p>
+                <ul>
+                    <li>Name and contact number</li>
+                    <li>Delivery address</li>
+                    <li>Email address (optional)</li>
+                    <li>Order preferences and special instructions</li>
+                </ul>
+
+                <h3>How We Use Your Information</h3>
+                <ul>
+                    <li><strong>Order Processing:</strong> To fulfill and deliver your orders</li>
+                    <li><strong>Communication:</strong> To send order updates, delivery notifications</li>
+                    <li><strong>Customer Service:</strong> To address your queries and concerns</li>
+                    <li><strong>Product Updates:</strong> To inform you about new collections (only with consent)</li>
+                </ul>
+
+                <h3>Information Security</h3>
+                <p>We take your privacy seriously:</p>
+                <ul>
+                    <li>Your personal information is stored securely</li>
+                    <li>We never share your data with third parties</li>
+                    <li>Payment information is not stored on our servers</li>
+                    <li>Communication via WhatsApp is encrypted</li>
+                </ul>
+
+                <h3>Cookies</h3>
+                <p>Our website uses cookies to:</p>
+                <ul>
+                    <li>Remember items in your shopping cart</li>
+                    <li>Improve your browsing experience</li>
+                    <li>Understand how you use our website</li>
+                </ul>
+                <p>You can disable cookies in your browser settings, but this may affect website functionality.</p>
+
+                <h3>Your Rights</h3>
+                <p>You have the right to:</p>
+                <ul>
+                    <li>Access your personal information</li>
+                    <li>Request correction of incorrect data</li>
+                    <li>Request deletion of your data</li>
+                    <li>Opt-out of marketing communications</li>
+                </ul>
+
+                <h3>Contact Us</h3>
+                <p>For any privacy-related concerns:</p>
+                <p><strong>WhatsApp:</strong>+91-98872 59471<br>
+                <strong>Address:</strong> 59-B, Triveni Nagar 1st, Jhotwara, Jaipur, Rajasthan 302012</p>
+
+                <h3>Policy Updates</h3>
+                <p>We may update this privacy policy from time to time. Any changes will be posted on this page.</p>
+                
+                <p class="policy-date"><em>Last updated: February 2026</em></p>
+            </div>
+        </div>
+    </div>
+
     <!-- Footer -->
     <footer class="footer" id="contact">
         <div class="container">
@@ -162,9 +307,10 @@
                     <h3>Vastra Shailii</h3>
                     <p>Authentic Jaipuri Prints & Cotton Wear</p>
                     <div class="social-links">
-                        <li class="ftco-animate"><a href="https://wa.me/919887259471"><span class="icon-whatsapp"></span></a></li>
-                        <li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=61585549467599"><span class="icon-facebook"></span></a></li>
-                        <li class="ftco-animate"><a href="https://www.instagram.com/vastra_shailii/"><span class="icon-instagram"></span></a></li>
+					
+                        <a href="https://www.facebook.com/profile.php?id=61585549467599" class="social-link">Facebook</a>
+                        <a href="https://wa.me/919887259471" class="social-link">WhatsApp</a>
+                        <a href="https://www.instagram.com/vastra_shailii/" class="social-link">Instagram</a>
                     </div>
                 </div>
                 <div class="footer-section">
@@ -175,9 +321,9 @@
                 </div>
                 <div class="footer-section">
                     <h4>Customer Service</h4>
-                    <a href="#">Shipping Policy</a>
-                    <a href="#">Returns & Exchange</a>
-                    <a href="#">Privacy Policy</a>
+                    <a href="#" onclick="openPolicyModal('shippingModal'); return false;">Shipping Policy</a>
+                    <a href="#" onclick="openPolicyModal('returnsModal'); return false;">Returns & Exchange</a>
+                    <a href="#" onclick="openPolicyModal('privacyModal'); return false;">Privacy Policy</a>
                 </div>
             </div>
             <div class="footer-bottom">
