--- a/index.html
+++ b/index.html
@@ -155,6 +155,225 @@
 
     <div class="modal-overlay" id="modalOverlay"></div>
 
+    <!-- Policy Modals -->
+    <div class="modal policy-modal" id="shippingModal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>🚚 Shipping Policy</h2>
+                <button class="close-modal" onclick="closePolicyModal('shippingModal')">&times;</button>
+            </div>
+            <div class="policy-content">
+                <h3>Delivery Timeline</h3>
+                <p>We strive to deliver your beautiful Jaipuri products as quickly as possible:</p>
+                <ul>
+                    <li><strong>Jaipur City:</strong> 1-2 business days</li>
+                    <li><strong>Rajasthan:</strong> 2-4 business days</li>
+                    <li><strong>Rest of India:</strong> 4-7 business days</li>
+                </ul>
+
+                <h3>Shipping Charges</h3>
+                <ul>
+                    <li><strong>Free Shipping:</strong> Orders above ₹2,000</li>
+                    <li><strong>Standard Shipping:</strong> ₹99 for orders below ₹2,000</li>
+                    <li><strong>Local Delivery (Jaipur):</strong> ₹50</li>
+                </ul>
+
+                <h3>Order Tracking</h3>
+                <p>Once your order is shipped, we'll send you tracking details via WhatsApp so you can monitor your delivery in real-time.</p>
+
+                <h3>Packaging</h3>
+                <p>All our products are carefully packed to ensure they reach you in perfect condition. Bedsheets and fabrics are sealed in protective packaging to maintain quality during transit.</p>
+
+                <h3>Processing Time</h3>
+                <ul>
+                    <li>Orders are processed within 24 hours on business days</li>
+                    <li>Orders placed on weekends ship out on Monday</li>
+                    <li>You'll receive order confirmation via WhatsApp immediately</li>
+                </ul>
+
+                <h3>Contact for Queries</h3>
+                <p>For any shipping-related questions, WhatsApp us at: <strong>098872 59471</strong></p>
+                <p>Store Address: 59-B, Triveni Nagar 1st, Nangal Jaisa Bohra, Near Prakash Public School, Jhotwara, Jaipur, Rajasthan 302012</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal policy-modal" id="returnsModal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>🔄 Returns & Exchange Policy</h2>
+                <button class="close-modal" onclick="closePolicyModal('returnsModal')">&times;</button>
+            </div>
+            <div class="policy-content">
+                <h3>7-Day Return & Exchange</h3>
+                <p>We want you to love your purchase! If you're not completely satisfied, you can return or exchange your product within 7 days of delivery.</p>
+
+                <h3>Conditions for Returns/Exchange</h3>
+                <ul>
+                    <li>Product must be unused and in original packaging</li>
+                    <li>All tags and labels should be intact</li>
+                    <li>Product should not be washed or altered</li>
+                    <li>Original invoice/receipt required</li>
+                    <li>Product should be in the same condition as received</li>
+                </ul>
+
+                <h3>Non-Returnable Items</h3>
+                <ul>
+                    <li>Products that have been used or washed</li>
+                    <li>Items without original packaging or tags</li>
+                    <li>Products purchased during clearance sales (unless defective)</li>
+                    <li>Items damaged due to misuse or negligence</li>
+                </ul>
+
+                <h3>How to Return/Exchange</h3>
+                <ol>
+                    <li>WhatsApp us at <strong>098872 59471</strong> within 7 days of receiving your order</li>
+                    <li>Send clear photos of the product and its packaging</li>
+                    <li>Mention reason for return/exchange</li>
+                    <li>We'll arrange pickup (in Jaipur) or provide return shipping address</li>
+                    <li>Once we receive and inspect, we'll process your request</li>
+                </ol>
+
+                <h3>Refund Process</h3>
+                <p>Once we receive and inspect the returned product:</p>
+                <ul>
+                    <li>Refunds will be processed within 5-7 business days</li>
+                    <li>Amount will be credited to your original payment method</li>
+                    <li>For Cash on Delivery orders, refund via bank transfer</li>
+                    <li>Exchanges will be shipped immediately after inspection</li>
+                </ul>
+
+                <h3>Exchange Options</h3>
+                <p>You can exchange for:</p>
+                <ul>
+                    <li>Same product in different color</li>
+                    <li>Same product in different size (for kurtis/suits)</li>
+                    <li>Different product of equal or higher value</li>
+                </ul>
+
+                <h3>Defective/Damaged Products</h3>
+                <p>If you receive a defective or damaged product:</p>
+                <ul>
+                    <li>Contact us within 48 hours with photos</li>
+                    <li>We'll provide immediate replacement at no extra cost</li>
+                    <li>Return shipping charges will be borne by us</li>
+                    <li>No questions asked for manufacturing defects</li>
+                </ul>
+
+                <h3>Customer Service</h3>
+                <p><strong>WhatsApp:</strong> 098872 59471<br>
+                <strong>Hours:</strong> 9:30 AM - 8:00 PM (Closed Sundays)<br>
+                <strong>Response Time:</strong> Within 2-4 hours</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal policy-modal" id="privacyModal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>🔒 Privacy Policy</h2>
+                <button class="close-modal" onclick="closePolicyModal('privacyModal')">&times;</button>
+            </div>
+            <div class="policy-content">
+                <h3>Information We Collect</h3>
+                <p>When you place an order with Vastra Shailii, we collect:</p>
+                <ul>
+                    <li>Name and contact number</li>
+                    <li>Delivery address and pincode</li>
+                    <li>Email address (optional)</li>
+                    <li>Order preferences and special instructions</li>
+                    <li>Payment information (for online payments)</li>
+                </ul>
+
+                <h3>How We Use Your Information</h3>
+                <ul>
+                    <li><strong>Order Processing:</strong> To fulfill and deliver your orders accurately</li>
+                    <li><strong>Communication:</strong> To send order updates, delivery notifications via WhatsApp</li>
+                    <li><strong>Customer Service:</strong> To address your queries, concerns, and provide support</li>
+                    <li><strong>Product Updates:</strong> To inform you about new collections and offers (only with consent)</li>
+                    <li><strong>Order History:</strong> To maintain records for returns, exchanges, and future purchases</li>
+                </ul>
+
+                <h3>Information Security</h3>
+                <p>We take your privacy seriously and implement strong security measures:</p>
+                <ul>
+                    <li>Your personal information is stored securely on protected servers</li>
+                    <li>We never share your data with third parties for marketing</li>
+                    <li>Payment information is not stored on our servers</li>
+                    <li>Communication via WhatsApp is end-to-end encrypted</li>
+                    <li>Access to customer data is limited to authorized personnel only</li>
+                </ul>
+
+                <h3>Cookies and Website Data</h3>
+                <p>Our website uses cookies to:</p>
+                <ul>
+                    <li>Remember items in your shopping cart</li>
+                    <li>Improve your browsing experience</li>
+                    <li>Understand how you use our website to improve it</li>
+                    <li>Remember your preferences for future visits</li>
+                </ul>
+                <p>You can disable cookies in your browser settings, but this may affect website functionality and your shopping experience.</p>
+
+                <h3>Data Sharing</h3>
+                <p>We may share your information only with:</p>
+                <ul>
+                    <li><strong>Delivery Partners:</strong> To ship your orders (name, address, phone only)</li>
+                    <li><strong>Payment Processors:</strong> For secure payment processing (they don't store your card details)</li>
+                    <li><strong>Legal Authorities:</strong> If required by law or to protect our rights</li>
+                </ul>
+                <p>We never sell, rent, or trade your personal information to third parties for marketing purposes.</p>
+
+                <h3>Your Rights</h3>
+                <p>You have the right to:</p>
+                <ul>
+                    <li>Access your personal information we hold</li>
+                    <li>Request correction of incorrect or incomplete data</li>
+                    <li>Request deletion of your personal data</li>
+                    <li>Opt-out of marketing communications at any time</li>
+                    <li>Withdraw consent for data processing</li>
+                    <li>Receive a copy of your data in portable format</li>
+                </ul>
+
+                <h3>Marketing Communications</h3>
+                <p>We may send you:</p>
+                <ul>
+                    <li>New product launches and collection updates</li>
+                    <li>Special offers and seasonal discounts</li>
+                    <li>Festival and occasion-specific promotions</li>
+                </ul>
+                <p>You can opt-out anytime by:</p>
+                <ul>
+                    <li>Replying "STOP" to our WhatsApp messages</li>
+                    <li>Contacting us at 098872 59471</li>
+                    <li>Clicking unsubscribe in email communications</li>
+                </ul>
+
+                <h3>Data Retention</h3>
+                <p>We retain your information:</p>
+                <ul>
+                    <li>Order data: 3 years for accounting and legal purposes</li>
+                    <li>Customer profiles: As long as your account is active</li>
+                    <li>Communication logs: 1 year for customer service quality</li>
+                </ul>
+
+                <h3>Children's Privacy</h3>
+                <p>Our services are not intended for children under 18. We do not knowingly collect information from minors. If you're under 18, please have a parent or guardian place orders.</p>
+
+                <h3>Contact Us</h3>
+                <p>For any privacy-related concerns or to exercise your rights:</p>
+                <p><strong>WhatsApp:</strong> 098872 59471<br>
+                <strong>Email:</strong> (Add your email if you have one)<br>
+                <strong>Address:</strong> 59-B, Triveni Nagar 1st, Nangal Jaisa Bohra, Near Prakash Public School, Jhotwara, Jaipur, Rajasthan 302012</p>
+                <p><strong>Store Hours:</strong> 9:30 AM - 8:00 PM (Closed Sundays)</p>
+
+                <h3>Policy Updates</h3>
+                <p>We may update this privacy policy from time to time to reflect changes in our practices or legal requirements. Any changes will be posted on this page with an updated date.</p>
+                
+                <p class="policy-date"><em>Last updated: February 2026</em></p>
+            </div>
+        </div>
+    </div>
+
     <!-- Footer -->
     <footer class="footer" id="contact">
         <div class="container">
@@ -176,9 +395,9 @@
                 </div>
                 <div class="footer-section">
                     <h4>Customer Service</h4>
-                    <a href="#">Shipping Policy</a>
-                    <a href="#">Returns & Exchange</a>
-                    <a href="#">Privacy Policy</a>
+                    <a href="#" onclick="openPolicyModal('shippingModal'); return false;">Shipping Policy</a>
+                    <a href="#" onclick="openPolicyModal('returnsModal'); return false;">Returns & Exchange</a>
+                    <a href="#" onclick="openPolicyModal('privacyModal'); return false;">Privacy Policy</a>
                 </div>
             </div>
             <div class="footer-bottom">
